[APL-1790] fixed tests;